# ITB-demo

./: .gitignore  README.md  draft.py  events.py  main.py  pyproject.toml
config/: config.py  config.yaml  loader.py  model.py
game/: action.py  factories.py  map.py  screen.py  tile.py  units.py
resource/: loader.py
