[tool.poetry]
name = "ito demo"
version = "0.1.0"
description = ""
authors = ["wufukevin <wufukevin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
pydantic = "^2.7.4"
pydantic-yaml = "^1.3.0"


[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.25.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
